res/examples/invalid/assert_type_mismatch_with_type_alias.eg
type String = string;

assert_type 123, String;

// out: TypeError: mismatched types: expected type `String` but received `number`